[package]
name = "mb1_memmap"
version = "0.1.0"
edition = "2021"

[features]
default = ["std"]
std = []

[lib]
# You can keep rlib for Rust-kernel use.
# Add staticlib only when you actually want a `.a` artifact you link from C/Makefile.
# crate-type = ["rlib", "staticlib"]
crate-type = ["rlib"]

[dependencies]
color-eyre = "0.6.5"
pretty_assertions = "1.4.1"
insta = "1"
proptest = "1"
rstest = "0.26.1"
similar-asserts = "1.7.0"
hex = "0.4.3"

